--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-    <title>Residencial Vila Real</title>
+    <title>Residencial Vila Real-</title>
   </head>
   <body>
   	<div style="text-align: center;" class="col-lg-6 mx-auto">
